PL-396 BUG - Global Footer styling differs for IE11 Fixing height weirdness on IE11

--- a/Boilerplate/src/sass/layout/_footer.scss
+++ b/Boilerplate/src/sass/layout/_footer.scss
@@ -31,6 +31,7 @@
         display: block;
         max-width: 100px;
         margin: 0 auto;
+        height: 100%;
     }
 
     &__copyright {
